--- a/css/addons/unraid/login-page/retro-terminal/green.css
+++ b/css/addons/unraid/login-page/retro-terminal/green.css
@@ -4,13 +4,13 @@
 /* --body-animation: flicker; This is the background that flickers. SET TO NONE TO REMOVE THE FLICKER ANIMATION! */
 /* --custom-text-header-animation: textflicker; /* SET TO NONE TO REMOVE THE FLICKER ANIMATION! */
 
-@import url(/css/addons/unraid/login-page/retro-terminal/retro-terminal-base.css);
+@import url(/theme.park/css/addons/unraid/login-page/retro-terminal/retro-terminal-base.css);
 :root {
 --main-bg-color:black;
 --body-before:#00ff771a;
 --body-after: #00ff7733;
---body-animation: flicker;
---logo: url(/css/addons/unraid/login-page/alien/logo/wings_green.png) center no-repeat;
+--body-animation: none;
+--logo: url(https://raw.githubusercontent.com/fireflies38/theme.park/cbcee567c2428153ad2800c4bf74fd3d154e9029/css/addons/unraid/login-page/retro-terminal/green_unraid.svg) center no-repeat;
 --text-color: #37f592;
 --input-color: #37f592;
 --link-color: #37f592;
@@ -23,7 +23,7 @@
 --selection-color: #68ffff;
 --custom-text-header:#37f592;
 --custom-text-header-shadow:#37f592;
---custom-text-header-animation: textflicker;
+--custom-text-header-animation: none;
 --input-font: 'Share Tech Mono', monospace;
 --text-font: 'Share Tech Mono', monospace;
 --loginbox-background-color: transparent;
